Figuring out how we can style individual elements using the id tag and using # in CSS to reference them.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Practice/title>
+    <title>CSS Practice</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello this is an example page, just trying to practice some basic CSS and get the flow of things moving.</h1>
-    <p>Paragraph 1</p>
-    <p>Paragraph 2</p>
+    <p id="p1" class="odd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem hic inventore quibusdam, nemo maiores nam nobis pariatur labore, esse sint facere magnam eligendi totam omnis. Exercitationem voluptatum hic delectus nesciunt.</p>
+    <p id="p2" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim fugiat cupiditate, laboriosam, maiores corrupti eaque consectetur praesentium a error officiis ullam fuga minima temporibus quas. Quas atque aliquid doloremque.</p>
+    <p id="p3" class="odd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum distinctio sed suscipit repellat reprehenderit? Suscipit reiciendis obcaecati consectetur commodi nesciunt earum. Impedit, possimus similique amet recusandae exercitationem omnis? Voluptates?</p>
+    <p id="p4" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quaerat molestias vero, aperiam aspernatur fuga enim facilis sapiente porro repellat, tempora dicta reprehenderit tempore distinctio dolorem commodi. Aperiam, accusantium eligendi.</p>
 </body>
 </html>
